@@ -1,3 +1,8 @@
+2006-09-07 [wwp]	2.4.0cvs162
+
+	* src/prefs_filtering.c
+		code simplification (get rid of dup var. assignment).
+
 2006-09-07 [wwp]	2.4.0cvs161
 
 	* src/summaryview.c
